Fixed Alignment, Added Color Theme, Changed Font

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Poppins:ital,wght@0,500;1,600&family=Rubik&display=swap');
 @import "tailwindcss";
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Poppins, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-
-
-
-
+  font-weight: 300;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
